# PicoChomper

./: Cargo.toml  rust-toolchain.toml
pico_chomp_controller/: Cargo.toml  build.rs
pico_chomp_controller/src/: main.rs
pico_chomp_devices/: Cargo.toml
pico_chomp_devices/src/: lib.rs
pico_chomp_host/: Cargo.toml  README.md
pico_chomp_host/src/: main.rs
src/: main.rs
