[package]
edition = "2024"
name = "chomper"
version = "0.1.0"
authors = ["Rachel Clark <rclark@pesa.com>"]

[[bin]]
name = "chomper"
test = false
bench = false

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread", "defmt", "executor-interrupt", "nightly"] }
embassy-sync = { version = "0.6" }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"]}
embassy-rp = { version = "0.4", features = ["binary-info", "defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa"] }
cyw43 = "0.3.0"
cyw43-pio = "0.4.0"
static_cell = "2.1.0"
[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
