[package]
edition = "2024"
name = "pico_chomp_controller"
version = "0.1.0"
authors = ["Rachel Clark <rclark@pesa.com>"]

[[bin]]
name = "pico_chomp_controller"
test = false
bench = false

[dependencies]
defmt = { workspace = true }
defmt-rtt = { workspace = true }
panic-probe = { workspace = true }

embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-io = { workspace = true }
embedded-io-async = { workspace = true }
embedded-storage = { workspace = true }

cortex-m-rt = { workspace = true }

embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
cortex-m = { workspace = true }
embassy-rp = { workspace = true }
cyw43 = { workspace = true }
cyw43-pio = { workspace = true }
static_cell = { workspace = true }
